# mplang

./: .bazelrc  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  AGENTS.md  BREAKING_CHANGES.md  CHANGELOG.md  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  WORKSPACE  buf.gen.yaml  buf.yaml  hatch_build.py  pyproject.toml  simple.md  simple.mpir  test_http_driver_e2e.py  test_lightphe_best_practice.py
.circleci/: config.yml  continue-config.yml  run-tutorials.yml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: api-lint.yml  badges.md  ci.yml  cla.yml  codeql.yml  dependency-review.yml  lint.yml  mypy.yml  publish-dev.yml  publish-nightly.yml  publish-release.yml  run-tutorials.yml  scorecards.yml
attestation-lib/generation/: generator_modules.cc
bazel/: repositories.bzl
design/: architecture.md  architecture_v2.md  cluster.yaml  compile_execute_decoupling.md  control_flow.md  frontend_arch.md  mlir_dialect_scaffold.md  new_type_system.md  object_store.md  persistence.md  runtime_value.md  sgb_optimization_log.md  sgb_v2.md  spu_channel_reuse.md  spu_channel_reuse_v2.md  table_tensor_conversion.md  tee_design.md  type_system.md
docs/: http_backend_architecture.md  runtime_observability.md
examples/: .gitkeep  README.md  phe_sort_agg.py  secure_shuffle_agg.py  table_constant_demo.py
examples/conf/: 3pc.json  3pc.yaml
examples/mp2/: bfv_sort_agg.py  pcall_jax.py  phe_sort_agg.py  sgb.py  stax_nn.py
examples/stax_nn/: README.md  models.py  stax_nn.py
examples/v1/: secure_shuffle_agg.py
examples/v2/: bfv_sort_agg.py  okvs_microbench.py  pcall_jax.py  phe_sort_agg.py  psi_bench.py  secure_shuffle_agg.py  sgb.py  sgb_bench.py  stax_nn.py  vole_bench.py
examples/xgboost/: bench_fhe_hist.py  he_op_impl.py  hist_jax.py  hist_jax_test.py  naive_np.py  sgb.py  sgb_test.py
mplang/: __init__.py  _device.py  api.py  cli.py  cli_guide.md  device.py  host.py  logging_config.py  mpi.py  plibs.py  random.py  simp.py  smpc.py
mplang/analysis/: __init__.py  diagram.py
mplang/backend/: __init__.py  base.py  builtin.py  context.py  crypto.py  phe.py  spu.py  sql_duckdb.py  stablehlo.py  tee.py  teeu.py
mplang/backends/: __init__.py  bfv_impl.py  channel.py  crypto_impl.py  field_impl.py  func_impl.py  phe_impl.py  simp_design.md  spu_impl.py  spu_state.py  store_impl.py  table_impl.py  tee_impl.py  tensor_impl.py  util.py
mplang/core/: base.py  (+21 more)
mplang2/: __init__.py  cluster.py  device.py
mplang_mlir/: CMakeLists.txt  DEVELOPMENT.md  Makefile  PYTHON_BINDING_DESIGN.md  README.md  run_tests.sh
mplang_mlir/examples/: README.md  control_flow_patterns.mlir  mpc_example.mlir  phe_example.mlir
mplang_mlir/include/: CMakeLists.txt
mplang_mlir/include/mplang-c/: Dialects.h  Registration.h
mplang_mlir/include/mplang/Dialect/: CMakeLists.txt
mplang_mlir/include/mplang/Dialect/MPIR/: CMakeLists.txt  MPIR.td  MPIROps.td  MPIRTypes.td
mplang_mlir/include/mplang/Dialect/MPLANG/: MPLANGDialect.td  MPLANGOps.h  MPLANGOps.td  MPLANGTypes.h  MPLANGTypes.td  MplangOps.h  MplangOps.td
mplang_mlir/include/mplang/Dialect/Mpir/: MpirDialect.h  MpirDialect.td  MpirOps.h  MpirOps.td  MpirTypeUtils.h  MpirTypes.h  MpirTypes.td
mplang_mlir/include/mplang/Dialect/Mplang/: MplangDialect.td  MplangOps.td  MplangTypes.h  MplangTypes.td
mplang_mlir/include/mplang/Dialect/PHE/: CMakeLists.txt  PHE.td  PHEOps.td  PHETypes.td
mplang_mlir/include/mplang/Transforms/: CMakeLists.txt  Passes.h  Passes.td
mplang_mlir/lib/CAPI/: CMakeLists.txt  Dialects.cpp  Registration.cpp
mplang_mlir/lib/Conversion/: CMakeLists.txt
mplang_mlir/lib/Conversion/MPIRToPHE/: MPIRToPHE.cpp.in
mplang_mlir/lib/Dialect/MPIR/: CMakeLists.txt  MPIRDialect.cpp.in
mplang_mlir/lib/Dialect/MPLANG/: CMakeLists.txt  MPLANGDialect.cpp  MPLANGOps.cpp  MPLANGTypes.cpp  MplangDialect.cpp  MplangOps.cpp  MplangTypes.cpp
mplang_mlir/lib/Dialect/Mpir/: CMakeLists.txt  MpirDialect.cpp  MpirOps.cpp  MpirTypeUtils.cpp  MpirTypes.cpp
mplang_mlir/lib/Dialect/Mplang/: CMakeLists.txt  MplangDialect.cpp  MplangOps.cpp  MplangTypes.cpp
mplang_mlir/lib/Dialect/PHE/: CMakeLists.txt  PHEDialect.cpp.in
mplang_mlir/lib/Transforms/: CMakeLists.txt  Passes.cpp  Peval.cpp.in
mplang_mlir/python/: CMakeLists.txt  INDEX.md  MpirExtension.cpp  MplangExtension.cpp  QUICKSTART.md  README.md  quick_check.sh  test_bindings.py  test_integration.py  test_ops_ext.py  validate_structure.py
mplang_mlir/python/mplang_mlir/: __init__.py
mplang_mlir/python/mplang_mlir/dialects/: __init__.py  _mpir_ops_ext.py  _mplang_ops_ext.py  mpir.py  mplang.py
mplang_mlir/scripts/: README.md  bootstrap_all.sh  dev-env.sh  quick-test.py  setup_mlir.sh
mplang_mlir/test/: CMakeLists.txt  test_ops.mlir
mplang_mlir/test/Dialect/Mpir/: conv_errors.mlir  peval_errors.mlir  shfl.mlir  shfl_errors.mlir  table_type.mlir  type_parsing.mlir  uniform_cond.mlir  uniform_cond_errors.mlir  uniform_while_errors.mlir
mplang_mlir/test/mlir/: CMakeLists.txt
mplang_mlir/test/mlir/mpir/: cf.mlir  ops.mlir  peval.mlir
mplang_mlir/test/mlir/phe/: ops.mlir
mplang_mlir/tools/: CMakeLists.txt
mplang_mlir/tools/mpir-opt/: CMakeLists.txt  mpir-opt.cpp
mplang_mlir/tools/mplang-opt/: CMakeLists.txt  main.cpp  main.cpp.in  mplang-opt.cpp
protos/: README.md  buf.yaml  executor.proto  mpir.proto  tee.proto
scripts/: build.sh  migrate_remaining.py  migrate_simp_api.py
tests/: __init__.py  conftest.py  test_fetch_semantics.py  test_logging.py  test_mpi.py  test_pytree_io.py  test_random.py  test_readme_examples.py  test_rsa_encryption.py  test_smpc.py  test_tutorials.py
tutorials/: 00_device_basics.py  01_function_decorator.py  02_simulation_and_driver.py  03_run_jax.py  04_ir_dump_and_analysis.py  05_run_sql.py  06_pipeline.py  07_stax_nn.py  08_logging.py  0_basic.py  10_analysis.py  11_fhe.py  12_auto_device.py  1_condition.py  2_whileloop.py  3_device.py  4_simulation.py  5_ir_dump.py  6_advanced.py  7_stdio.py  8_phe.py  9_tee.py  MIGRATION.md  README-TEE.md  README.md  __init__.py  generate_test_ir.py  run.sh  tee_attestation.py
(+970 files in other folders)
